[gd_scene load_steps=17 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Camera.gd" type="Script" id=2]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=3]
[ext_resource path="res://Assets/PressStart2P-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/HUD.gd" type="Script" id=5]
[ext_resource path="res://Assets/music.ogg" type="AudioStream" id=6]
[ext_resource path="res://UI/Menu.gd" type="Script" id=7]
[ext_resource path="res://StateMachine/Player_Container.gd" type="Script" id=12]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=4]
0/name = "icon.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 2 )
0/navigation_offset = Vector2( 0, 0 )
0/navigation = SubResource( 1 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.376471 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.639216, 0.133333, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.501961 )

[sub_resource type="DynamicFont" id=8]
size = 30
outline_color = Color( 0.788235, 0.12549, 0.12549, 1 )
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]

[node name="Player_Container" type="Node2D" parent="." groups=[
"save",
]]
script = ExtResource( 12 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 2, 0 )
tile_set = SubResource( 4 )
collision_use_kinematic = true
collision_layer = 3
collision_mask = 3
format = 1
tile_data = PoolIntArray( -655360, 0, 0, -655302, 0, 0, -589824, 0, 0, -589766, 0, 0, -524288, 0, 0, -524230, 0, 0, -458752, 0, 0, -458694, 0, 0, -393216, 0, 0, -393158, 0, 0, -327680, 0, 0, -327622, 0, 0, -262144, 0, 0, -262086, 0, 0, -196608, 0, 0, -196550, 0, 0, -131072, 0, 0, -131014, 0, 0, -65536, 0, 0, -65478, 0, 0, 0, 0, 0, 58, 0, 0, 65536, 0, 0, 65594, 0, 0, 131072, 0, 0, 131130, 0, 0, 196608, 0, 0, 196666, 0, 0, 262144, 0, 0, 262202, 0, 0, 327680, 0, 0, 327738, 0, 0, 393216, 0, 0, 393274, 0, 0, 458752, 0, 0, 458810, 0, 0, 524288, 0, 0, 524346, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 589860, 0, 0, 589861, 0, 0, 589862, 0, 0, 589863, 0, 0, 589864, 0, 0, 589865, 0, 0, 589866, 0, 0, 589867, 0, 0, 589868, 0, 0, 589869, 0, 0, 589870, 0, 0, 589871, 0, 0, 589872, 0, 0, 589873, 0, 0, 589874, 0, 0, 589875, 0, 0, 589876, 0, 0, 589877, 0, 0, 589878, 0, 0, 589879, 0, 0, 589880, 0, 0, 589881, 0, 0, 589882, 0, 0 )

[node name="Camera" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_bottom = 630
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
script = ExtResource( 2 )

[node name="Enemy_Container" type="Node2D" parent="." groups=[
"save",
]]

[node name="Enemy" type="KinematicBody2D" parent="Enemy_Container"]
collision_layer = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Enemy_Container/Enemy"]
position = Vector2( 1548.5, 500.806 )
scale = Vector2( 1.04674, 0.974809 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enemy_Container/Enemy"]
position = Vector2( 1550.89, 500 )
polygon = PoolVector2Array( 32, -32, 32, 32, -32, 32, -32, -32, 31, -32 )

[node name="Enemy2" type="KinematicBody2D" parent="Enemy_Container"]
collision_layer = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Enemy_Container/Enemy2"]
position = Vector2( 1614.43, 498.133 )
scale = Vector2( 1.04674, 0.974809 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enemy_Container/Enemy2"]
position = Vector2( 1614.14, 500 )
scale = Vector2( 1.0174, 1 )
polygon = PoolVector2Array( 32, -32, 32, 32, -32, 32, -32, -32, 31, -32 )

[node name="Enemy3" type="KinematicBody2D" parent="Enemy_Container"]
position = Vector2( 66.8174, -0.89093 )
collision_layer = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Enemy_Container/Enemy3"]
position = Vector2( 1614.43, 498.133 )
scale = Vector2( 1.04674, 0.974809 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enemy_Container/Enemy3"]
position = Vector2( 1614.14, 500.891 )
scale = Vector2( 1.0174, 1 )
polygon = PoolVector2Array( 32, -32, 32, 32, -32, 32, -32, -32, 31, -32 )

[node name="Enemy4" type="KinematicBody2D" parent="Enemy_Container"]
position = Vector2( -0.890869, -64.1447 )
collision_layer = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Enemy_Container/Enemy4"]
position = Vector2( 1614.43, 498.133 )
scale = Vector2( 1.04674, 0.974809 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enemy_Container/Enemy4"]
position = Vector2( 1614.14, 500.891 )
scale = Vector2( 1.0174, 1 )
polygon = PoolVector2Array( 32, -32, 32, 32, -32, 32, -32, -32, 31, -32 )

[node name="HUD" type="CanvasLayer" parent="." groups=[
"save",
]]
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="HUD"]
margin_right = 1024.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="ProgressBar" parent="HUD/Panel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 445.0
margin_bottom = 40.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="HUD/Panel"]
margin_left = 450.0
margin_right = 574.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 8 )
text = "60"
align = 1
valign = 1

[node name="Player2" type="ProgressBar" parent="HUD/Panel"]
margin_left = 1019.0
margin_top = 35.0
margin_right = 1459.0
margin_bottom = 70.0
rect_rotation = 180.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="HUD/Panel"]
autostart = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="Menu" type="Control" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Menu"]
margin_left = 1034.33
margin_top = -20.4907
margin_right = 2058.33
margin_bottom = 579.509
color = Color( 0, 0, 0, 0.439216 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="Menu"]
margin_left = 1457.92
margin_top = 270.381
margin_right = 1657.92
margin_bottom = 310.381
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="Menu"]
margin_left = 1461.48
margin_top = 408.018
margin_right = 1661.48
margin_bottom = 448.018
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Menu"]
margin_left = 1457.02
margin_top = 333.745
margin_right = 1657.02
margin_bottom = 373.745
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="HUD/Panel/Timer" to="HUD" method="_on_Timer_timeout"]
[connection signal="pressed" from="Menu/Save" to="Menu" method="_on_Save_pressed"]
[connection signal="pressed" from="Menu/Load" to="Menu" method="_on_Load_pressed"]
[connection signal="pressed" from="Menu/Quit" to="Menu" method="_on_Quit_pressed"]
